# habit-tracker

./: .gitignore  README.md  devenv.nix
backend/: README.md  app.py  columns.yaml  hello.py  manual.py  pyproject.toml
backend/habit_tracker/: constants.py  models.py
backend/habit_tracker/columns/: models.py  parsing.py
backend/habit_tracker/storage/: base.py  google_sheet.py  local.py
backend/sheet/: update_sheet.py
backend/tests/: test_models.py
backend/tests/columns/: mock_columns.yaml  models.py  test_models.py  test_parsing.py
backend/tests/sheet/: test_google_sheet.py  test_local.py  test_update_sheet.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: DashboardLayout.tsx  HabitContext.tsx  HabitProvider.tsx  navbar.tsx  theme-switch.tsx
frontend/components/HabitTable/: HabitCell.tsx  HabitHeader.tsx  HabitRow.tsx  HabitTable.tsx
frontend/config/: site.ts
frontend/lib/: dateUtils.ts  habitsApi.ts
frontend/types/: habits.ts
