[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "gspread>=6.2.0",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "UP",  # pyupgrade (modernize syntax)
  "B",   # flake8-bugbear (common bugs & smells)
  "C4",  # flake8-comprehensions (comprehension improvements)
  "DTZ", # flake8-datetimez (timezone issues)
  "SIM", # flake8-simplify (simpler code patterns)
  "RUF", # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow `assert` in tests

[tool.ruff.lint.isort]
known-first-party = ["habit_tracker"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
